# CARECatStatus

./: Cargo.toml  README.md  justfile
migrations/: 0001_init.sql  0002_add_location.sql  0004_users.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs  ws.rs
static/: app.js  index.html  manifest.json  style.css  sw.js
systemd/: care-cat-status.service
